syntax="proto3";

option go_package="./GrpcUserService";

message LoginUserRequest {
    string Phone=1;
    string Password=2;
}

message LoginUserResponse {
    int32 ErrorCode=1;
    int32 UserId=2;
}

message RegisterUserRequest {
    string Fullname=1;
    string Phone=2;
    string Password=3;
    string Gender=4;
    int64 DateCreated=5;
    int64 DateUpdated=6;
}

message RegisterUserResponse {
    int32 ErrorCode=1;
    int32 UserId=2;
}

message RegisterTutorRequest {
    string Fullname=1;
    string Phone=2;
    string Password=3;
    string Gender=4;
    int32 Age=5;
    string Topic=6;
    string City=7;
    string Country=8;
    int64 DateCreated=9;
    int64 DateUpdated=10;
}

message FilterTutorRequest {
    string Gender=1;
    string Topic=2;
    string City=3;
    string Country=4;
    int32 Age=5;
}

message FilterTutorResponse {
    int32 TutorId=1;
}

message RegisterTutorResponse {
    int32 ErrorCode=1;
    int32 TutorId=2;
}

message LoginTutorRequest {
    string Phone=1;
    string Password=2;
}

message LoginTutorResponse {
    int32 ErrorCode=1;
    int32 TutorId=2;
}


service UserService {
    rpc LoginUser(LoginUserRequest) returns (LoginUserResponse);
    rpc LoginTutor(LoginTutorRequest) returns (LoginTutorResponse);
    rpc RegisterTutor(RegisterTutorRequest) returns (RegisterTutorResponse);
    rpc RegisterUser(RegisterUserRequest) returns (RegisterUserResponse);
}



